--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@sumsub/websdk-react": "^2.5.0",
     "next": "16.0.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "sumsub-node-sdk": "^2.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
